BaseCarEntity fix