@@ -1,6 +1,5 @@
 package cz.maxtechnik.dif.entity.vehicle;
 
-import cz.maxtechnik.dif.DifMod;
 import cz.maxtechnik.dif.init.events.client.CarEngineSoundInstance;
 import cz.maxtechnik.dif.network.ModNetworking.SyncCarPositionPacket;
 import net.minecraft.core.BlockPos;
@@ -195,11 +194,11 @@ public abstract class BaseCarEntity extends Entity{
 		if(g==0) setRPM(getRPM()+(getIdleRPM()+(getMaxRPM()-getIdleRPM())*throttle*0.25F-getRPM())*0.15F);
 		else{
 			float tRPM=Math.abs(velocity)*getGearRatios()[g==-1?0:g-1]*rpmC;
-			setRPM(Math.max(getIdleRPM(),Math.min(getMaxRPM(),Math.abs(velocity)<0.05F&&throttle>0F?Math.max(tRPM,getIdleRPM()+(getMaxRPM()-getIdleRPM())*throttle*0.25F):tRPM)));
+			setRPM(Math.clamp(getMaxRPM(),getIdleRPM(),Math.abs(velocity)<0.05F&&throttle>0F?Math.max(tRPM,getIdleRPM()+(getMaxRPM()-getIdleRPM())*throttle*0.25F):tRPM));
 		}
 		float thrust=0F;
 		if(g!=0&&throttle>0f&&getFuelMb()>0F){
-			float base=throttle*getBaseAcceleration()*(getGearRatios()[g==-1?0:g-1]/getGearRatios()[0])*Math.max(0.25F,Math.min(1F,(float)(-4.0*Math.pow(getRPM()/getMaxRPM()-0.75,2)+1.0)))*(getRPM()>=getMaxRPM()*0.999F?0F:shiftCooldown>0?(float)shiftCooldown/getShiftCooldownTicks():1F);
+			float base=throttle*getBaseAcceleration()*(getGearRatios()[g==-1?0:g-1]/getGearRatios()[0])*Math.clamp((float)(-4.0*Math.pow(getRPM()/getMaxRPM()-0.75,2)+1.0),0.25F,1F)*(getRPM()>=getMaxRPM()*0.999F?0F:shiftCooldown>0?(float)shiftCooldown/getShiftCooldownTicks():1F);
 			thrust=g==-1?-base*0.4F:base;
 		}else if(getFuelMb()<=0F) setRPM(Math.max(0F,getRPM()-getMaxRPM()*0.04F));
 		if(getJumping(d)){
@@ -207,7 +206,7 @@ public abstract class BaseCarEntity extends Entity{
 			velocity=Math.signum(velocity)*Math.max(0F,Math.abs(velocity)-getBrakingDeceleration()*0.15F);
 			lGrip*=0.6F;
 		}
-		velocity=Math.max(-0.25F,Math.min(msBT,velocity+thrust-velocity*Math.abs(velocity)*getAeroDrag()-velocity*rRes));
+		velocity=Math.clamp(msBT,-0.25F,velocity+thrust-velocity*Math.abs(velocity)*getAeroDrag()-velocity*rRes);
 		if(s==SurfaceType.SOUL_SAND&&Math.abs(velocity)>22F/72F)
 			velocity=velocity*0.82F+Math.signum(velocity)*(22F/72F)*0.18F;
 		if(Math.abs(velocity)>0.015F){
@@ -343,7 +342,7 @@ public abstract class BaseCarEntity extends Entity{
 		return entityData.get(DATA_FUEL);
 	}
 	public void setFuelMb(float v){
-		entityData.set(DATA_FUEL,Math.max(0F,Math.min(getMaxFuelMb(),v)));
+		entityData.set(DATA_FUEL,Math.clamp(getMaxFuelMb(),0F,v));
 	}
 	public float getFuelPercent(){
 		return getMaxFuelMb()>0?getFuelMb()/getMaxFuelMb():0F;
